--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,114 @@
-.inn {
-  color: red;
+body {
+  font-family: Roboto, sans-serif;
+  color: #212121;
+}
+footer {
+  background: #2f303a;
+}
+address {
+  color: #ffffff;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.5;
+}
+address a {
+  font-size: 14px;
+  line-height: 1.5;
+}
+address a:hover {
+  color: #2196f3;
+}
+address a:focus {
+  color: #2196f3;
+}
+h1 {
+  color: #ffffff;
+  background: #2f303a;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  text-align: center;
+}
+h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+}
+p {
+  color: #757575;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+}
+a {
+  color: #757575;
+  text-decoration: none;
+}
+nav a {
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+}
+nav a:hover {
+  color: #2196f3;
+}
+nav a:focus {
+  color: #2196f3;
+}
+.social-links a {
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+}
+.social-links a:hover {
+  color: #2196f3;
+}
+.social-links a:focus {
+  color: #2196f3;
+}
+.stil {
+  font-family: Raleway, sans-serif;
+  color: #000000;
+  font-size: 26px;
+  line-height: 1.19;
+}
+.web {
+  color: #2196f3;
+}
+.stiltwo {
+  font-family: Raleway, sans-serif;
+  color: #ffffff;
+  font-size: 26px;
+  line-height: 1.19;
+}
+.push {
+  background: #f5f4fa;
+}
+.push:hover {
+  background: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
+}
+.push:focus {
+  background: #2196f3;
+  color: #ffffff;
+}
+.wall {
+  background: #f5f4fa;
+}
+.man {
+  background: #ffffff;
+  text-align: center;
+}
+.secendpush {
+  text-align: center;
 }
