--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
 :root {
-  --color: #ffffff;
-  --color1: #212121;
-  --color2: #2f303a;
-  --color3: #2196f3;
-  --color4: #f5f4fa;
-  --color5: #757575;
-  --color6: #000000;
+  --milk: #ffffff;
+  --night: #212121;
+  --fog: #2f303a;
+  --sky: #2196f3;
+  --snow: #f5f4fa;
+  --cloud: #757575;
+  --coffee: #000000;
   --pixel: 14px;
 }
 body {
   font-family: "Roboto", sans-serif;
-  background: var(--color);
-  color: var(--color1);
+  background: var(--milk);
+  color: var(--night);
 }
 .wall {
-  background: var(--color4);
+  background: var(--snow);
 }
 .main {
-  color: var(--color);
-  background: var(--color2);
+  color: var(--milk);
+  background: var(--fog);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -33,13 +33,13 @@ body {
 }
 .box {
   font-weight: 700;
-  font-size: var(pixel);
+  font-size: var(--pixel);
   line-height: 1.14;
 }
 .boxs {
-  color: var(--color5);
+  color: var(--cloud);
   font-weight: 400;
-  font-size: var(pixel);
+  font-size: var(--pixel);
   line-height: 1.7;
 }
 .black-link {
@@ -50,78 +50,78 @@ body {
   text-decoration: none;
 }
 .black-link:hover {
-  color: var(--color3);
+  color: var(--sky);
 }
 .black-link:focus {
-  color: var(--color3);
+  color: var(--sky);
 }
 .social-links {
-  color: var(--color5);
+  color: var(--cloud);
   font-weight: 500;
-  font-size: var(pixel);
+  font-size: var(--pixel);
   line-height: 1.14;
   text-decoration: none;
 }
 .social-links:hover {
-  color: var(--color3);
+  color: var(--sky);
 }
 .social-links:focus {
-  color: var(--color3);
+  color: var(--sky);
 }
 .post {
-  color: #ffffff;
+  color: var(--milk);
   font-style: normal;
 }
 .address-link {
-  color: var(--color5);
+  color: var(--cloud);
   font-style: normal;
-  font-size: var(pixel);
+  font-size: var(--pixel);
   line-height: 1.5;
   text-decoration: none;
 }
 .address-link:hover {
-  color: var(--color3);
+  color: var(--sky);
 }
 .address-link:focus {
-  color: var(--color3);
+  color: var(--sky);
 }
 .stil {
-  font-family: Raleway, sans-serif;
-  color: var(--color6);
+  font-family: "Raleway", sans-serif;
+  color: var(--coffee);
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
 }
 .stil:focus {
-  color: var(--color3);
+  color: var(--sky);
 }
 .web {
-  color: var(--color3);
+  color: var(--sky);
 }
 .stil-two {
   font-family: "Raleway", sans-serif;
-  color: var(--color);
+  color: var(--milk);
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
 }
 .push {
-  background: var(--color4);
+  background: var(--snow);
 }
 .push:hover {
-  background: var(--color3);
-  color: var(--color);
+  background: var(--sky);
+  color: var(--milk);
   cursor: pointer;
 }
 .push:focus {
-  background: var(--color3);
-  color: var(--color);
+  background: var(--sky);
+  color: var(--milk);
 }
 .wall-secend {
-  background: var(--color2);
+  background: var(--fog);
 }
 .man {
-  background: var(--color);
+  background: var(--milk);
   text-align: center;
 }
 .secend-push {
